[gd_scene load_steps=9 format=3 uid="uid://day3ne6tjexcj"]

[ext_resource type="Script" uid="uid://dt822xqvf6ptj" path="res://scripts/ui.gd" id="1_aac20"]
[ext_resource type="Texture2D" uid="uid://bbckv40hpuv3u" path="res://assets/hamburger.png" id="3_0dwhk"]
[ext_resource type="Texture2D" uid="uid://bbp2xsflngcla" path="res://assets/pause_icon.png" id="3_g5kmx"]
[ext_resource type="Texture2D" uid="uid://b6liflf1jrs1p" path="res://assets/play_icon.png" id="4_0dwhk"]

[sub_resource type="Animation" id="Animation_vspwy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(865, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PanelContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_02nsg"]
resource_name = "close_menu"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.966667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(865, 1), Vector2(1155, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PanelContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.0333333, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_7n028"]
resource_name = "open_menu"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1155, 1), Vector2(865, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PanelContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vspwy"]
_data = {
&"RESET": SubResource("Animation_vspwy"),
&"close_menu": SubResource("Animation_02nsg"),
&"open_menu": SubResource("Animation_7n028")
}

[node name="UI" type="Node2D"]
script = ExtResource("1_aac20")

[node name="PanelContainer" type="PanelContainer" parent="."]
visible = false
offset_left = 865.0
offset_top = 1.0
offset_right = 1151.0
offset_bottom = 649.0

[node name="VSplitContainer" type="VSplitContainer" parent="PanelContainer"]
layout_mode = 2

[node name="StatsContainer" type="VBoxContainer" parent="PanelContainer/VSplitContainer"]
layout_mode = 2

[node name="HealthLabel" type="RichTextLabel" parent="PanelContainer/VSplitContainer/StatsContainer"]
layout_mode = 2
text = "DRAGOONS"
fit_content = true

[node name="CurrencyLabel" type="RichTextLabel" parent="PanelContainer/VSplitContainer/StatsContainer"]
layout_mode = 2
text = "DOKIUM"
fit_content = true

[node name="WaveLabel" type="RichTextLabel" parent="PanelContainer/VSplitContainer/StatsContainer"]
layout_mode = 2
text = "WAVE:"
fit_content = true

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/VSplitContainer"]
layout_mode = 2

[node name="TurretsContainer" type="VBoxContainer" parent="PanelContainer/VSplitContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VSplitContainer"]
layout_mode = 2

[node name="MenuButton" type="Button" parent="."]
offset_right = 128.0
offset_bottom = 128.0
scale = Vector2(0.3, 0.3)
toggle_mode = true
icon = ExtResource("3_0dwhk")

[node name="PlayButton" type="TextureButton" parent="."]
offset_left = 39.0
offset_right = 239.0
offset_bottom = 200.0
scale = Vector2(0.192, 0.192)
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("3_g5kmx")
texture_pressed = ExtResource("4_0dwhk")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_vspwy")
}

[connection signal="toggled" from="MenuButton" to="." method="_on_button_toggled"]
[connection signal="toggled" from="PlayButton" to="." method="_on_play_button_toggled"]
